Changed logging directory for garbage collection logs